<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_limits"
        android:icon="@drawable/ic_nav_limits"
        android:title="@string/nav_limits" />
    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_nav_stats"
        android:title="@string/nav_stats" />
    <item
        android:id="@+id/nav_todo"
        android:icon="@drawable/ic_nav_todo"
        android:title="@string/nav_todo" />
    <item
        android:id="@+id/nav_features"
        android:icon="@drawable/ic_nav_features"
        android:title="@string/nav_features" />
</menu>
